# vrs

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
vrs/: Cargo.toml
vrs-novel/: Cargo.toml
vrs-novel/src/: error.rs  lib.rs  novel.rs
vrs-project/: Cargo.toml
vrs-script/: Cargo.toml
vrs-script/src/: command.rs  lib.rs  text.rs
vrs/lib/: lib.rs  route.rs  ui.rs
vrs/lib/message/: index.rs
vrs/lib/widgets/: mod.rs
vrs/src/: main.rs
