[package]
name = "vrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vrs"
path = "lib/lib.rs"

[[bin]]
name = "vrs-interpreter"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
egui-macroquad = "0.12.0"
macroquad = "0.3.25"
