[package]
name = "vrs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vrs-interpreter"
path = "src/main.rs"

[lib]
name = "vrs"
path = "lib/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.5.2", features = ["image"] }
rfd = "0.10.0"

vrs-novel = { path = "../vrs-novel" }
